--- a/README
+++ b/README
@@ -1,51 +1,67 @@
-NAME
-    CPAN::YACSmoke::Plugin::Outlook - Outlook plugin for CPAN::YACSmoke
-
-SYNOPSIS
-      my $plugin = CPAN::YACSmoke::Plugin::Outlook->new(%config);
-      my @list = $plugin->download_list();
-
-REQUIREMENTS
-    This package requires the following modules (most of which are not
-    included with Perl):
-
-      CPAN::YACSmoke
-      Win32::OLE
-      Win32::OLE::Const
-      File::Basename
-      Carp
-
-Installation
-    Installation can be done using the traditional Makefile.PL method.
-
-      perl Makefile.PL
-      make
-      make test
-      make install
-
-    (On Windows platforms you should use nmake instead.)
+CPAN::YACSmoke::Plugin::Outlook
+===============================
 
 DESCRIPTION
-    This module is intended to be used as a plugin extension with
-	CPAN::YACSmoke. Its use standalone, is not terribly useful, as such
-	see CPAN::YACSmoke for more useful information.
+
+An Outlook plugin for CPAN::YACSmoke. As a standalone module it isn't
+terribly useful, as such see CPAN::YACSmoke for more useful information.
+
+SYNOPSIS
+
+  my $plugin = CPAN::YACSmoke::Plugin::Outlook->new(%config);
+  my @list = $plugin->download_list();
+
+DEPENDENCIES
+
+The distribution requires the following modules:
+
+  CPAN::YACSmoke
+  Win32::OLE
+  Win32::OLE::Const
+  File::Basename     (CORE Perl)
+  Carp               (CORE Perl)
+
+For testing purposes, the following modules are desireable, but not essential:
+
+  Test::Pod
+  Test::Pod::Coverage
+
+INSTALLATION
+
+To install this module type the following:
+
+   perl Makefile.PL
+   make
+   make test
+   make install
+
+On Windows platforms you should use nmake instead.
 
 CAVEATS
-    This is a proto-type release. Use with caution and supervision.
 
-    The current version has a very primitive interface and limited
-    functionality. Future versions may have a lot of options.
+This is a proto-type release. Use with caution and supervision.
+
+The current version has a very primitive interface and limited
+functionality. Future versions may have a lot of options.
 
 BUGS, PATCHES & FIXES
 
-    There are no known bugs at the time of this release. However, if you spot
-    a bug or are experiencing difficulties, that is not explained within the 
-    POD documentation, please send an email to barbie@cpan.org or submit a bug
-    to the RT system (http://rt.cpan.org/). However, it would help greatly if
-    you are able to pinpoint problems or even supply a patch. 
+There are no known bugs at the time of this release. However, if you spot
+a bug or are experiencing difficulties, that is not explained within the 
+POD documentation, please send an email to barbie@cpan.org or submit a bug
+to the RT system (http://rt.cpan.org/). However, it would help greatly if
+you are able to pinpoint problems or even supply a patch. 
 
-    Fixes are dependant upon their severity and my availablity. Should a fix 
-    not be forthcoming, please feel free to (politely) remind me.
+Fixes are dependant upon their severity and my availablity. Should a fix 
+not be forthcoming, please feel free to (politely) remind me.
+
+DSLIP
+
+  b - Beta testing
+  d - Developer
+  p - Perl-only
+  O - Object oriented
+  p - Standard-Perl: user may choose between GPL and Artistic
 
 AUTHOR
 
