Import of BARBIE/CPAN-YACSmoke-Plugin-Outlook-0.05 from CPAN.
gitpan-cpan-distribution: CPAN-YACSmoke-Plugin-Outlook
gitpan-cpan-version:      0.05
gitpan-cpan-path:         BARBIE/CPAN-YACSmoke-Plugin-Outlook-0.05.tar.gz
gitpan-cpan-author:       BARBIE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension CPAN::YACSmoke::Plugin::Outlook.
 
+0.05    29/03/2005
+        - Added better checking for Outlook in typelib list
+
 0.04    27/03/2005
         - Added DSLIP information
         - Added POD coverage test script
