--- a/README
+++ b/README
@@ -20,11 +20,13 @@ The distribution requires the following modules:
   Win32::OLE::Const
   File::Basename     (CORE Perl)
   Carp               (CORE Perl)
+  Test::More
 
 For testing purposes, the following modules are desireable, but not essential:
 
   Test::Pod
   Test::Pod::Coverage
+  Test::YAML::Meta
 
 INSTALLATION
 
@@ -44,16 +46,19 @@ This is a proto-type release. Use with caution and supervision.
 The current version has a very primitive interface and limited
 functionality. Future versions may have a lot of options.
 
-BUGS, PATCHES & FIXES
+SUPPORT
 
-There are no known bugs at the time of this release. However, if you spot
-a bug or are experiencing difficulties, that is not explained within the 
-POD documentation, please send an email to barbie@cpan.org or submit a bug
-to the RT system (http://rt.cpan.org/). However, it would help greatly if
-you are able to pinpoint problems or even supply a patch. 
+There are no known bugs at the time of this release. However, if you spot a
+bug or are experiencing difficulties that are not explained within the POD
+documentation, please submit a bug to the RT system (see link below). However,
+it would help greatly if you are able to pinpoint problems or even supply a 
+patch. 
 
-Fixes are dependant upon their severity and my availablity. Should a fix 
-not be forthcoming, please feel free to (politely) remind me.
+Fixes are dependant upon their severity and my availablity. Should a fix not
+be forthcoming, please feel free to (politely) remind me by sending an email
+to barbie@cpan.org .
+
+RT: http://rt.cpan.org/Public/Dist/Display.html?Name=CPAN-YACSmoke-Plugin-Outlook
 
 DSLIP
 
@@ -65,15 +70,16 @@ DSLIP
 
 AUTHOR
 
-    Barbie, <barbie@cpan.org>
-    for Miss Barbell Productions <http://www.missbarbell.co.uk>.
+Barbie <barbie@cpan.org>
+for Miss Barbell Productions http://www.missbarbell.co.uk.
 
 COPYRIGHT AND LICENSE
 
-    Copyright (C) 2005 Barbie for Miss Barbell Productions.
-    All Rights Reserved.
+  Copyright (C) 2005-2007 Barbie for Miss Barbell Productions.
 
-    This library is free software; you can redistribute it and/or modify it
-    under the same terms as Perl itself, either Perl version 5.8.3 or, at
-    your option, any later version of Perl 5 you may have available.
+  This library is free software; you can redistribute it and/or 
+  modify it under the same terms as Perl itself.
 
+The full text of the licenses can be found in the Artistic file included with
+this distribution, or in perlartistic file available with your Perl 
+installation.
