Import of BARBIE/CPAN-YACSmoke-Plugin-Outlook-0.08 from CPAN.
gitpan-cpan-distribution: CPAN-YACSmoke-Plugin-Outlook
gitpan-cpan-version:      0.08
gitpan-cpan-path:         BARBIE/CPAN-YACSmoke-Plugin-Outlook-0.08.tar.gz
gitpan-cpan-author:       BARBIE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension CPAN::YACSmoke::Plugin::Outlook.
 
+0.08	01/12/2010
+        - fixed pattern matching for private subs from Win32::Const, for
+          Pod::Coverage tests.
+
 0.07	30/11/2010
         - CPAN::YACSmoke is no longer supported.
         - The recommend CPANPLUS smoker is now CPANPLUS-Smoker.
